# Agents

./: HelloAgentsLLM.py
WAgents/: .gitignore  CLAUDE.md  pyproject.toml
WAgents/WAgents/: .env  __init__.py
WAgents/WAgents/agents/: __init__.py  simple_agent.py
WAgents/WAgents/core/: Exceptions.py  __init__.py  agent.py  config.py  llm.py  messages.py
WAgents/WAgents/test/: test_my_calculator.py  test_my_date_tool.py  test_my_stock_tool.py
WAgents/WAgents/tools/: __init__.py  base.py  registry.py
WAgents/WAgents/tools/builtin/: __init__.py  my_calculator_tool.py  my_date_tool.py  my_stock_tool.py  stock_data_tool.py
chapter01/learn_agent/: get_weather.py  search_attraction.py
